[metadata]
name = pluggable_app_engine
version = 0.1
author = Mikołaj Trawiński
url = https://github.com/mikolajtr/pluggable_app_engine
author_email = devnull@mikolajtrawinski.pl
description = A small library for creating pluggable app
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5.3

[options.packages.find]
where = src